# send-email-with-sendgrid-rust

./: .env  Cargo.toml
src/: main.rs
